fixed wrappin style for contact icons - mobile

--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     padding: 30px 50px;
-    flex-grow:1;
 
 }
 
