--- a/src/pages/education/Education.module.css
+++ b/src/pages/education/Education.module.css
@@ -11,6 +11,7 @@
 
 .logo-container{
     display: flex;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
     background: white;
